--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>Git Tutorial</h1>
-    <h3>Git Commands :</h3>
+    <h3>Important Git Commands :</h3>
     git clone <i>url</i>
   </body>
 </html>
